Added required fields to inputs in UI.

--- a/views/doctor-login.ejs
+++ b/views/doctor-login.ejs
@@ -27,15 +27,15 @@
                 <table style="margin: auto">
                     <tr>
                         <td><label for="doctorid">Doctor ID:</label></td>
-                        <td><input type="number" id="doctorid" name="doctorid"></td>
+                        <td><input type="number" id="doctorid" name="doctorid" required></td>
                     </tr>
                     <tr>
                         <td><label for="name">Name:</label></td>
-                        <td><input type="text" id="name" name="name"></td>
+                        <td><input type="text" id="name" name="name" required></td>
                     </tr>
                     <tr>
                         <td><label for="password">Password:</label></td>
-                        <td><input type="password" id="password" name="password"></td>
+                        <td><input type="password" id="password" name="password" required></td>
                     </tr>
                 </table>
                 <br>
