--- a/views/patient-login.ejs
+++ b/views/patient-login.ejs
@@ -27,15 +27,15 @@
                 <table style="margin: auto">
                     <tr>
                         <td><label for="name">Name:</label></td>
-                        <td><input type="text" id="name" name="name"></td>
+                        <td><input type="text" id="name" name="name" required></td>
                     </tr>
                     <tr>
                         <td><label for="medicare">Medicare Number:</label></td>
-                        <td><input type="number" id="medicare" name="medicare"></td>
+                        <td><input type="number" id="medicare" name="medicare" required></td>
                     </tr>
                     <tr>
                         <td><label for="dateofbirth">Date of Birth:</label></td>
-                        <td><input type="date" id="dateofbirth" name="dateofbirth"></td>
+                        <td><input type="date" id="dateofbirth" name="dateofbirth" required></td>
                     </tr>
                 </table>
                 <br>
