--- a/views/patient-register.ejs
+++ b/views/patient-register.ejs
@@ -27,24 +27,24 @@
                 <table style="margin: auto">
                     <tr>
                         <td><label for="medicare">Medicare Number:</label></td>
-                        <td><input type="number" id="medicare" name="medicare"></td>
+                        <td><input type="number" id="medicare" name="medicare" required></td>
                     </tr>
                     <tr>
                         <td><label for="firstname">First Name:</label></td>
-                        <td><input type="text" id="firstname" name="firstname"></td>
+                        <td><input type="text" id="firstname" name="firstname" required></td>
                     </tr>
                     <tr>
                         <td><label for="lastname">Last Name:</label></td>
-                        <td><input type="text" id="lastname" name="lastname"></td>
+                        <td><input type="text" id="lastname" name="lastname" required></td>
                     </tr>
                     <tr>
                         <td><label for="dateofbirth">Date of Birth:</label></td>
-                        <td><input type="date" id="dateofbirth" name="dateofbirth"></td>
+                        <td><input type="date" id="dateofbirth" name="dateofbirth" required></td>
                     </tr>
                     <tr>
                         <td><label for="sex">Sex:</label></td>
                         <td>
-                            <select id="sex" name="sex">
+                            <select id="sex" name="sex" required>
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
                                 <!-- <option value="Other">Other</option> -->
@@ -53,16 +53,16 @@
                     </tr>
                     <tr>
                         <td><label for="email">E-mail Address:</label></td>
-                        <td><input type="text" id="email" name="email"></td>
+                        <td><input type="text" id="email" name="email" required></td>
                     </tr>
                     <tr>
                         <td><label for="phone">Phone Number:</label></td>
-                        <td><input type="text" id="phone" name="phone"></td>
+                        <td><input type="text" id="phone" name="phone" required></td>
                     </tr>
                     <tr>
                         <td><label for="province">Province:</label></td>
                         <td>
-                            <select id="province" name="province">
+                            <select id="province" name="province" required>
                                 <option value="AB">Alberta</option>
                                 <option value="BC">British Columbia</option>
                                 <option value="MB">Manitoba</option>
@@ -81,15 +81,15 @@
                     </tr>
                     <tr>
                         <td><label for="city">City:</label></td>
-                        <td><input type="text" id="city" name="city"></td>
+                        <td><input type="text" id="city" name="city" required></td>
                     </tr>
                     <tr>
                         <td><label for="address">Address:</label></td>
-                        <td><input type="text" id="address" name="address"></td>
+                        <td><input type="text" id="address" name="address" required></td>
                     </tr>
                     <tr>
                         <td><label for="postalcode">Postal Code:</label></td>
-                        <td><input type="text" id="postalcode" name="postalcode"></td>
+                        <td><input type="text" id="postalcode" name="postalcode" required></td>
                     </tr>
                 </table>
                 <br>
