--- a/views/doctor-register.ejs
+++ b/views/doctor-register.ejs
@@ -27,19 +27,19 @@
                 <table style="margin: auto">
                     <tr>
                         <td><label for="doctorid">Doctor ID:</label></td>
-                        <td><input type="number" id="doctorid" name="doctorid"></td>
+                        <td><input type="number" id="doctorid" name="doctorid" required></td>
                     </tr>
                     <tr>
                         <td><label for="name">Name:</label></td>
-                        <td><input type="text" id="name" name="name"></td>
+                        <td><input type="text" id="name" name="name" required></td>
                     </tr>
                     <tr>
                         <td><label for="password">Password:</label></td>
-                        <td><input type="password" id="password" name="password"></td>
+                        <td><input type="password" id="password" name="password" required></td>
                     </tr>
                     <tr>
                         <td><label for="reenter">Re-enter Password:</label></td>
-                        <td><input type="password" id="reenter" name="reenter"></td>
+                        <td><input type="password" id="reenter" name="reenter" required></td>
                     </tr>
                 </table>
                 <br>
